<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2caret</name>
  <version>0.2.1</version>
  <description>ROS 2 CLI package for caret</description>
  <maintainer email="yamasaki@isp.co.jp">ymski</maintainer>
  <maintainer email="uetsuki@isp.co.jp">isp-uetsuki</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>python3-tabulate</exec_depend>
  <depend>ros2cli</depend>
  <depend>caret_analyze</depend>
  <depend>caret_msgs</depend>
  <depend>tracetools_trace</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>
  <test_depend>ament_mypy</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
